--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,42 @@
 <header class="header">
 	<div class="header__container">
+		<div class="header__row">
+			<div class="logo">
+				<div class="logo__img"><img src="@img/main/logo.svg" alt="logo"></div>
+				<div class="logo__text">Специализируется на продаже, установке и ремонте газовых котлов</div>
+			</div>
+			<div class="header__social">
+				<div class="social__block">
+					<span class="social__block-map"><img src="@img/main/map.svg" alt="map"></span>
+					<div class="social__block-text">Республика Казахстан г. Алматы</div>
+				</div>
+				<div class="social__icons">
+					<a href="tel:+77472701702"><img src="@img/main/phone.svg" alt="phone"></a>
+					<a href="https://api.whatsapp.com/send?phone=77472701702"><img src="@img/main/whatsapp.svg"
+							alt="whatsapp"></a>
+				</div>
+				<div data-da=".header__menu, 570, 2" class="social__tel">
+					<a href="tel:+77472701702" class="social__tel-phone">+7 747 270 17 02</a>
+					<a href="mailto:alfavitservice@gmail.com" class="social__tel-mail">alfavitservice@gmail.com</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </header>
+
+<div class="headertop">
+	<div class="headertop__container">
+		<div class="header__menu menu">
+			<button type="button" class="menu__icon icon-menu"><span></span></button>
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li class="menu__item"><a href="" class="menu__link">Главная</a></li>
+					<li class="menu__item"><a href="" class="menu__link">Услуги</a></li>
+					<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+					<li class="menu__item"><a href="" class="menu__link">Проекты</a></li>
+					<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+</div>
