--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,34 @@
 <footer class="footer">
+	<div class="map">
+		<div style="position:relative;overflow:hidden;"><a
+				href="https://yandex.kz/maps/162/almaty/?utm_medium=mapframe&utm_source=maps"
+				style="color:#eee;font-size:12px;position:absolute;top:0px;">Алматы</a><a
+				href="https://yandex.kz/maps/geo/53168302/?ll=76.909198%2C43.269624&utm_medium=mapframe&utm_source=maps&z=12.68"
+				style="color:#eee;font-size:12px;position:absolute;top:14px;">Алматы — Яндекс Карты</a><iframe
+				src="https://yandex.kz/map-widget/v1/-/CCUZaKahxC" width="100%" height="400" frameborder="1"
+				allowfullscreen="true" style="position:relative;"></iframe></div>
+	</div>
 	<div class="footer__container">
+		<div class="footer__row">
+			<div class="footer__left">
+				<div class="footer__maps">
+					<span>Республика Казахстан, город Алматы</span>
+				</div>
+				<div class="footer__phone">
+					<img src="@img/tel.svg" alt="phone">
+					<a href="tel:+77472701702">+7 747 270 17 02</a>
+				</div>
+				<div class="footer__mail">
+					<img src="@img/email.svg" alt="">
+					<a href="mailto:alfavitservice@gmail.com">E-mail: alfavitservice@gmail.com</a>
+				</div>
+				<div class="footer__social">
+					<a href="tel:+77472701702"><img src="@img/main/phone.svg" alt="phone"></a>
+					<a href="https://api.whatsapp.com/send?phone=77472701702"><img src="@img/main/whatsapp.svg"
+							alt="whatsapp"></a>
+				</div>
+			</div>
+			<div class="footer__right"></div>
+		</div>
 	</div>
 </footer>
