--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,45 @@
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main class="page">
+
+			<section class="main">
+				<div class="main__container">
+					<div class="main__row">
+						<div class="main__left">
+							<h1 class="main__left-title">Ремонт и установка газовых котлов <span>в Алматы</span> </h1>
+							<span class="main__left-subtitle">Мы сохраним тепло в вашем доме!</span>
+							<div class="main__left-block block__left">
+								<div class="block__left-item">
+									<img src="@img/main/icon/01.png" alt="icon">
+									<span class="block__left-text">Выезд мастера бесплатный</span>
+								</div>
+								<div class="block__left-item">
+									<img src="@img/main/icon/02.png" alt="icon">
+									<span class="block__left-text">Опыт мастеров больше 5 лет</span>
+								</div>
+								<div class="block__left-item">
+									<img src="@img/main/icon/03.png" alt="icon">
+									<span class="block__left-text">Ремонт любой сложности</span>
+								</div>
+								<div class="block__left-item">
+									<img src="@img/main/icon/04.png" alt="icon">
+									<span class="block__left-text">Гарантия от 365 дней</span>
+								</div>
+							</div>
+							<a href="https://api.whatsapp.com/send?phone=77472701702" class="block__left-btn btn">Оставить
+								заявку</a>
+						</div>
+						<div class="main__right">
+							<div class="main__rigt-img"><img src="@img/main/main-img.png" alt="img"></div>
+						</div>
+					</div>
+					<div class="main__imgbg">
+						<img src="@img/main/main-bg.jpg" alt="">
+					</div>
+				</div>
+				<div class="main__titletext">GAS SERVICE</div>
+			</section>
+
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
