--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,296 @@
 						<img src="@img/main/main-bg.jpg" alt="">
 					</div>
 				</div>
-				<div class="main__titletext">GAS SERVICE</div>
+				<!-- <div class="main__titletext">GAS SERVICE</div> -->
+				<div class="main__titleimg">
+					<img src="@img/main/text.svg" alt="">
+				</div>
+			</section>
+
+			<section class="service">
+				<div class="service__container">
+					<div class="service__title title">Наши услуги</div>
+					<div class="service__row">
+						<div class="service__row-card">
+							<div class="service__row-card-img">
+								<img src="@img/service/s01.png" alt="service">
+							</div>
+							<div class="service__row-card-content">
+								<div class="service__row-card-content-title">Диагностика</div>
+								<div class="service__row-card-content-text">Наш мастер приезжает к вам точно в указанное время,
+									проводит диагностику и устанавливает истинную причину поломки.</div>
+								<a href="https://api.whatsapp.com/send?phone=77472701702"
+									class="service__row-card-content-btn btn">Вызвать мастера</a>
+							</div>
+						</div>
+						<div class="service__row-card">
+							<div class="service__row-card-img">
+								<img src="@img/service/s02.png" alt="service">
+							</div>
+							<div class="service__row-card-content">
+								<div class="service__row-card-content-title">Ремонт газовых котлов</div>
+								<div class="service__row-card-content-text">Аварийный вызов от 30 минут до двух часов. Приведем
+									отопительную систему в исправное состояние.</div>
+								<a href="https://api.whatsapp.com/send?phone=77472701702"
+									class="service__row-card-content-btn btn">Вызвать мастера</a>
+							</div>
+						</div>
+						<div class="service__row-card">
+							<div class="service__row-card-img">
+								<img src="@img/service/s03.png" alt="service">
+							</div>
+							<div class="service__row-card-content">
+								<div class="service__row-card-content-title">Монтаж и установка</div>
+								<div class="service__row-card-content-text">Монтаж котлов отопления настенных и напольных в
+									соответствии с техническими нормами. Оформление документов.</div>
+								<a href="https://api.whatsapp.com/send?phone=77472701702"
+									class="service__row-card-content-btn btn">Вызвать мастера</a>
+							</div>
+						</div>
+						<div class="service__row-card">
+							<div class="service__row-card-img">
+								<img src="@img/service/s04.png" alt="service">
+							</div>
+							<div class="service__row-card-content">
+								<div class="service__row-card-content-title">Продажа котлов</div>
+								<div class="service__row-card-content-text">Консультация по выбору оборудования. Подбор газового
+									котла отопления для замены или монтажа в дом.</div>
+								<a href="https://api.whatsapp.com/send?phone=77472701702"
+									class="service__row-card-content-btn btn">Вызвать мастера</a>
+							</div>
+						</div>
+						<div class="service__row-card">
+							<div class="service__row-card-img">
+								<img src="@img/service/s05.png" alt="service">
+							</div>
+							<div class="service__row-card-content">
+								<div class="service__row-card-content-title">Промывка и чистка</div>
+								<div class="service__row-card-content-text">Чистка промывка теплообменника котла на месте. Все
+									оборудование привезем с собой. Гарантия на все.</div>
+								<a href="https://api.whatsapp.com/send?phone=77472701702"
+									class="service__row-card-content-btn btn">Вызвать мастера</a>
+							</div>
+						</div>
+						<div class="service__row-card">
+							<div class="service__row-card-img">
+								<img src="@img/service/s06.png" alt="service">
+							</div>
+							<div class="service__row-card-content">
+								<div class="service__row-card-content-title">Запчасти на газовые котлы</div>
+								<div class="service__row-card-content-text"> Крепежная и соединительная фурнитура для монтажа,
+									ремонта и профилактики. Горелки, датчики давления, краны, насосы, клапана, реле, вентиляторы,
+									теплообменники, прокладки, термометры.</div>
+								<a href="https://api.whatsapp.com/send?phone=77472701702"
+									class="service__row-card-content-btn btn">Вызвать мастера</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="help">
+				<div class="help__container">
+					<div class="help__row">
+						<div class="help__row-left">
+							<div class="help__row-left-img">
+								<img src="@img/help/help-img.png" alt="help">
+							</div>
+						</div>
+						<div class="help__row-right">
+							<div class="help__row-right-subtitle">Нужна ПОМОЩЬ</div>
+							<div class="help__row-right-title">СПЕЦИАЛИСТА?</div>
+							<div class="help__row-right-text">Получите консультацию по деталям продажи, установки и монтажа
+								оборудования</div>
+							<a href="" class="help__row-right-btn btn">Получить консультацию</a>
+						</div>
+					</div>
+				</div>
+				<div class="help__img">
+					<img src="@img/help/help-bg.jpg" alt="help">
+				</div>
+			</section>
+
+			<section class="about">
+				<div class="about__container">
+					<div class="about__title title">О нас</div>
+					<div class="about__row">
+						<div class="about__left">
+							<div class="about__left-text">
+								<p>Наша сервисная служба занимается ремонтом и монтажом настенных, напольных котлов. Ремонт
+									котла в общем случае – это совокупность технических операций, направленных на восстановление
+									его работоспособности, утерянной в процессе эксплуатации. При отказе устройства необходимо
+									проанализировать возможные причины, способствовавшие этому. </p>
+								<p>Мы осуществляем ремонт газового оборудования профессионально, быстро и качественно. Сервисные
+									инженеры обладают огромным опытом работы, постоянно проходят обучения и курсы повышения
+									квалификации в специальных комбинатах.</p>
+								<p>Наличие профессионального диагностического и ремонтного оборудования для сервиса газовых
+									котлов любой мощности позволяет выполнить ремонт на высшем уровне. Это наша ежедневная
+									работа, которую необходимо реализовать на 100%. </p>
+							</div>
+						</div>
+						<div class="about__right">
+							<div class="about__right-img">
+								<img src="@img/about/about-img.png" alt="about">
+							</div>
+						</div>
+					</div>
+					<div class="about__block">
+						<div class="about__block-card block__card block__card-one">
+							<div class="block__card-img">
+								<img src="@img/about/icon1.png" alt="icon">
+							</div>
+							<div class="block__card-title">Цены ниже сервисных до 30%</div>
+							<div class="block__card-text"></div>
+						</div>
+						<div class="about__block-card block__card block__card-two">
+							<div class="block__card-img">
+								<img src="@img/about/icon2.png" alt="icon">
+							</div>
+							<div class="block__card-title">Выезд мастера на дом</div>
+							<div class="block__card-text">Мастер прибудет в удобное для Вас время! Выезд бесплатный в случае
+								состоявшегося ремонта.</div>
+						</div>
+						<div class="about__block-card block__card block__card-fo">
+							<div class="block__card-img">
+								<img src="@img/about/icon3.png" alt="icon">
+							</div>
+							<div class="block__card-title">Гарантия от 12 месяцев</div>
+							<div class="block__card-text">Оставляем квитанцию с гарантией от 12 месяцев на выполненные работы и
+								некоторые запчасти</div>
+						</div>
+						<div class="about__block-card block__card block__card-free">
+							<div class="block__card-img">
+								<img src="@img/about/icon4.png" alt="icon">
+							</div>
+							<div class="block__card-title">7 дней в неделю</div>
+							<div class="block__card-text">Работаем каждый день, даже в выходные. В особых случаях можем
+								приехать поздно вечером.</div>
+						</div>
+						<div class="about__block-card block__card block__card-five">
+							<div class="block__card-img">
+								<img src="@img/about/icon5.png" alt="icon">
+							</div>
+							<div class="block__card-title">Обслуживание и настройка котлов</div>
+							<div class="block__card-text">Обслуживание и настройка котлов любого типа и марки.</div>
+						</div>
+						<div class="about__block-card block__card block__card-sevent">
+							<div class="block__card-img">
+								<img src="@img/about/icon6.png" alt="icon">
+							</div>
+							<div class="block__card-title">Мастера с опытом от 5 лет и допусками</div>
+							<div class="block__card-text">В нашем штате только квалифицированные мастера, которые помогут
+								решить вам любую задачу</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="work">
+				<div class="work__container">
+					<div class="work__title title">Наши работы</div>
+					<div class="work__row">
+						<!-- Оболочка слайдера -->
+						<div class="work__slider swiper">
+							<!-- Двигающееся часть слайдера -->
+							<div class="work__wrapper swiper-wrapper">
+								<!-- Слайд -->
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work01.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work02.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work03.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work04.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work05.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work06.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work07.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work08.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work09.jpg" alt="work">
+									</div>
+								</div>
+								<div class="work__slide swiper-slide">
+									<div class="work__slide-img">
+										<img src="@img/work/work10.jpg" alt="work">
+									</div>
+								</div>
+							</div>
+							<!-- Если нужна навигация (влево/вправо) -->
+							<button type="button" class="swiper-button-prev"></button>
+							<button type="button" class="swiper-button-next"></button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="repair">
+				<div class="repair__container">
+					<div class="repair__row">
+						<div class="repair__left">
+							<div class="repair__left-img">
+								<img src="@img/repair/reapir-img.png" alt="">
+							</div>
+						</div>
+						<div class="repair__right">
+							<div class="repair__right-title">Срочный ремонт газовых котлов в Алматы</div>
+							<div class="repair__right-subtitle">в 90% случаев ремонт в день обращения!</div>
+							<div class="repair__right-items right-items">
+								<div class="right-items__list">
+									<img src="@img/repair/icon-repeair.png" alt="icon">
+									<span class="right-items__list-text">Котел не греет воду? Капает? Не зажигается? Забился
+										теплообменник?</span>
+								</div>
+								<div class="right-items__list">
+									<img src="@img/repair/icon-repeair.png" alt="icon">
+									<span class="right-items__list-text">Ремонт от 5000 тенге! Оригинальные запчасти и
+										сервис!</span>
+								</div>
+								<div class="right-items__list">
+									<img src="@img/repair/icon-repeair.png" alt="icon">
+									<span class="right-items__list-text">Выездные бригады со всем необходимым оборудованием и
+										допусками.</span>
+								</div>
+							</div>
+							<form action="" class="repair__right-form">
+								<input type="tel" name="tel" class="repair__input input" placeholder="Ваш номер телефона">
+								<button type="submit" class="repair__right-btn btn">Оставить заявку</button>
+							</form>
+						</div>
+					</div>
+					<div class="repair__bg">
+						<img src="@img/repair/repair-bg.png" alt="repair">
+					</div>
+				</div>
 			</section>
 
 		</main>
