--- a/src/html/_head.htm
+++ b/src/html/_head.htm
@@ -1,10 +1,18 @@
  <head>
-	<title>@@title</title>
-	<meta charset="UTF-8">
-	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="shortcut icon" href="favicon.ico">
-	<!-- <meta name="robots" content="noindex, nofollow"> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+ 	<title>@@title</title>
+ 	<meta charset="UTF-8">
+ 	<meta name="format-detection" content="telephone=no">
+ 	<!-- <style>body{opacity: 0;}</style> -->
+ 	<link rel="stylesheet" href="css/style.min.css">
+ 	<link rel="shortcut icon" href="favicon.ico">
+ 	<!-- <meta name="robots" content="noindex, nofollow"> -->
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 	<!-- Open Graph Generated: a.pr-cy.ru -->
+ 	<meta property="og:type" content="website">
+ 	<meta property="og:title" content="Ремонт и установка газовых котлов в Алматы ">
+ 	<meta property="og:description" content="Специализируется на продаже, установке и ремонте газовых котлов">
+ 	<meta property="og:url" content="https://gaz-service.kz/">
+ 	<meta property="og:image" content="https://gaz-service.kz/main-img.png">
+ 	<meta property="og:site_name" content="Gas Service">
+ 	<meta property="og:locale" content="ru_RU">
+ </head>
