--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -1,11 +1,12 @@
-<!-- 
-<div id="popup" aria-hidden="true" class="popup">
+<div id="form-message" aria-hidden="true" class="popup">
 	<div class="popup__wrapper">
 		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
 			<div class="popup__text">
+				<div class="popup__text-title">Спасибо за вашу заявку!</div>
+				<div class="popup__text-subtitle">В ближайшие время с вами свяжется специалист компании,
+					который проконсультирует вас по всем вопросам.</div>
 			</div>
+			<button data-close type="button" class="popup__close-btn">Закрыть</button>
 		</div>
 	</div>
 </div>
- -->
