--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -30,11 +30,11 @@
 			<button type="button" class="menu__icon icon-menu"><span></span></button>
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="" class="menu__link">Главная</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Услуги</a></li>
-					<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Проекты</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+					<li class="menu__item"><a data-goto=".main" href="#" class="menu__link">Главная</a></li>
+					<li class="menu__item"><a data-goto=".service" href="#" class="menu__link">Услуги</a></li>
+					<li class="menu__item"><a data-goto=".about" href="#" class="menu__link">О нас</a></li>
+					<li class="menu__item"><a data-goto=".work" href="#" class="menu__link">Проекты</a></li>
+					<li class="menu__item"><a data-goto=".repair" href="#" class="menu__link">Контакты</a></li>
 				</ul>
 			</nav>
 		</div>
