--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -32,3 +32,11 @@
 		</div>
 	</div>
 </footer>
+
+<div type="button" class="callback-bt">
+	<a href="https://api.whatsapp.com/send?phone=77472701702" target="_blank" rel="nofollow">
+		<div class="text-call">
+			<i class="fab fa-whatsapp"></i>
+		</div>
+	</a>
+</div>
