--- a/src/html/_head.htm
+++ b/src/html/_head.htm
@@ -12,7 +12,7 @@
  	<meta property="og:title" content="Ремонт и установка газовых котлов в Алматы ">
  	<meta property="og:description" content="Специализируется на продаже, установке и ремонте газовых котлов">
  	<meta property="og:url" content="https://gaz-service.kz/">
- 	<meta property="og:image" content="https://gaz-service.kz/main-img.png">
+ 	<meta property="og:image" content="https://gaz-service.kz/img/main/main-img.png">
  	<meta property="og:site_name" content="Gas Service">
  	<meta property="og:locale" content="ru_RU">
  </head>
