--- a/src/html/_js.htm
+++ b/src/html/_js.htm
@@ -1,4 +1,6 @@
 <script src="js/app.min.js"></script>
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+
 
 <script>
 	window.addEventListener("DOMContentLoaded", function () {
